R UI 000 fix table component (#294)
* RUI-000: fix table component

* release

* add comment

--- a/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
+++ b/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
@@ -14,3 +14,8 @@
 .tableBody td:hover .copyButton {
   opacity: 1;
 }
+
+.tableBody td {
+  /* TODO: Get this fixed in Figma */
+  max-width: var(--em-tablechart-cell-max-width, calc(3 * var(--em-core-size--2000)));
+}
