--- a/src/components/charts/tables/tables.module.css
+++ b/src/components/charts/tables/tables.module.css
@@ -29,6 +29,10 @@
   border-radius: var(--em-tablechart-border-radius, 0.75rem);
 }
 
+.tableAdjustedContainer.fullWidth {
+  width: 100%;
+}
+
 .tableContainerScroll {
   overflow-x: auto;
   overflow-y: hidden;
@@ -81,6 +85,10 @@
   white-space: nowrap; /* single line */
   overflow: hidden; /* hide overflow */
   text-overflow: ellipsis; /* show … */
+}
+
+.table.cellWrap td {
+  white-space: wrap;
 }
 
 .table thead th:last-of-type,
@@ -184,4 +192,12 @@
 .table tbody tr.tableLastRow td {
   border-bottom: var(--em-tablechart-border-width, 1px) solid
     var(--em-tablechart-border-color, #ededf1);
+}
+
+.loadingIndicator {
+  padding: var(--em-tablechart-loading-indicator-padding, 1rem);
+  font-size: var(--em-tablechart-loading-indicator-font-size, 1rem);
+  font-family: var(--em-tablechart-loading-indicator-font-family, sans-serif);
+  color: var(--em-tablechart-loading-indicator-color, #212129);
+  text-align: center;
 }
