--- a/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
+++ b/src/components/charts/tables/Table/components/TableBody/TableBody.module.css
@@ -19,3 +19,8 @@
   /* TODO: Get this fixed in Figma */
   max-width: var(--em-tablechart-cell-max-width, calc(3 * var(--em-core-size--2000)));
 }
+
+.bottomRefCell {
+  padding: 0;
+  border: 0;
+}
