update loading + add ref for scrolling on table

--- a/src/components/charts/tables/tables.module.css
+++ b/src/components/charts/tables/tables.module.css
@@ -60,10 +60,14 @@
   cursor: pointer;
   position: relative;
   box-sizing: border-box;
-  padding: var(--em-tablechart-cell-padding, 0.5rem)
-    calc(
-      var(--em-tablechart-cell-padding, 0.5rem) + var(--em-tablechart-padding-left-right, 0.25rem)
-    );
+  padding-top: var(--em-tablechart-cell-padding, 0.5rem);
+  padding-bottom: var(--em-tablechart-cell-padding, 0.5rem);
+  padding-left: calc(
+    var(--em-tablechart-cell-padding, 0.5rem) + var(--em-tablechart-padding-left-right, 0.25rem)
+  );
+  padding-right: calc(
+    var(--em-tablechart-cell-padding, 0.5rem) + var(--em-tablechart-padding-left-right, 0.25rem)
+  );
   border-bottom: var(--em-tablechart-border-width, 1px) solid
     var(--em-tablechart-border-color, #ededf1);
   border-right: var(--em-tablechart-border-width, 1px) solid
@@ -191,9 +195,13 @@
 }
 
 .loadingIndicator {
+  text-align: center;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+
   padding: var(--em-tablechart-loading-indicator-padding, 1rem);
   font-size: var(--em-tablechart-loading-indicator-font-size, 1rem);
   font-family: var(--em-tablechart-loading-indicator-font-family, sans-serif);
   color: var(--em-tablechart-loading-indicator-color, #212129);
-  text-align: center;
 }
