--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,7 +163,9 @@
   --em-buttonicon-padding-top-bottom--medium: var(--em-core-spacing--0300);
   --em-buttonicon-padding-top-bottom--small: var(--em-core-spacing--0150);
   --em-card-background: var(--em-sem-background);
+  --em-card-border-color: rgb(255 255 255 / 0%);
   --em-card-border-radius: var(--em-core-border-radius--400);
+  --em-card-border-width: 0px;
   --em-card-feedback-color--error: var(--em-sem-status-error-text);
   --em-card-feedback-font-size: var(--em-core-font-size--sm);
   --em-card-feedback-gap: var(--em-core-spacing--0300);
@@ -236,6 +238,24 @@
   --em-chart-tooltip-title-font-size: var(--em-core-font-size--sm);
   --em-chart-tooltip-title-font-weight: var(--em-core-font-weight--bold);
   --em-chart-tooltip-title-line-height: var(--em-core-line-height--md);
+  --em-daterangepicker-accent-color: var(--em-sem-background--inverted);
+  --em-daterangepicker-day-color: var(--em-sem-text);
+  --em-daterangepicker-day-font-family: var(--em-core-font-family--base);
+  --em-daterangepicker-day-font-size: var(--em-core-font-size--sm);
+  --em-daterangepicker-day-font-weight: var(--em-core-font-weight--medium);
+  --em-daterangepicker-day-outside: var(--em-sem-text--subtle);
+  --em-daterangepicker-day-range-background: var(--em-sem-background--light);
+  --em-daterangepicker-day-range-limit-border-radius: var(--em-core-border-radius--200);
+  --em-daterangepicker-day-range-limit-color: var(--em-sem-text--inverted);
+  --em-daterangepicker-day-size: var(--em-core-size--0800);
+  --em-daterangepicker-label-color: var(--em-sem-text);
+  --em-daterangepicker-label-font-family: var(--em-core-font-family--base);
+  --em-daterangepicker-label-font-size: var(--em-core-font-size--sm);
+  --em-daterangepicker-label-font-weight: var(--em-core-font-weight--medium);
+  --em-daterangepicker-weekday-color: var(--em-sem-text--muted);
+  --em-daterangepicker-weekday-font-family: var(--em-core-font-family--base);
+  --em-daterangepicker-weekday-font-size: var(--em-core-font-size--sm);
+  --em-daterangepicker-weekday-font-weight: var(--em-core-font-weight--medium);
   --em-field-feedback-color: var(--em-sem-text--muted);
   --em-field-feedback-color--error: var(--em-sem-status-error-text);
   --em-field-feedback-error-font-size: var(--em-core-font-size--xs);
@@ -275,7 +295,6 @@
   --em-kpichart-label-font-size: var(--em-core-font-size--sm);
   --em-kpichart-label-font-weight: var(--em-core-font-weight--regular);
   --em-kpichart-label-gap: var(--em-core-spacing--0200);
-  --em-kpichart-label-line-height: var(--em-core-line-height--sm);
   --em-kpichart-number-font-size: var(--em-core-font-size--xxl);
   --em-kpichart-number-font-weight: var(--em-core-font-weight--bold);
   --em-kpichart-number-line-height: var(--em-core-line-height--xl);
@@ -414,6 +433,11 @@
   --em-tablechart-heatmap-color: var(--em-sem-chart-color--1);
   --em-tablechart-icon-size: var(--em-core-size--0400);
   --em-tablechart-line-height: var(--em-core-line-height--sm);
+  --em-tablechart-loading-indicator-color: var(--em-sem-text--neutral);
+  --em-tablechart-loading-indicator-font-family: var(--em-core-font-family--base);
+  --em-tablechart-loading-indicator-font-size: var(--em-core-font-size--xs);
+  --em-tablechart-loading-indicator-font-weight: var(--em-core-font-weight--bold);
+  --em-tablechart-loading-indicator-padding: var(--em-core-spacing--0300);
   --em-tablechart-padding-left-right: var(--em-core-spacing--0100);
   --em-tablechart-pagination-button-gap: var(--em-core-spacing--0200);
   --em-tablechart-pagination-height: var(--em-core-size--1200);
@@ -448,39 +472,4 @@
   --em-textfield-max-width: 400px;
   --em-textfield-min-width: 160px;
   --em-textfield-padding: var(--em-core-spacing--0200);
-}
-
-/* Temporary (Design team to update figma) */
-:root {
-  --em-daterangepicker-accent-color: var(--em-sem-background--inverted);
-  --em-daterangepicker-day-size: var(--em-core-size--0800);
-  --em-daterangepicker-day-range-background: var(--em-sem-background--light);
-  --em-daterangepicker-day-range-limit-color: var(--em-sem-text--inverted);
-
-  --em-daterangepicker-day-color: var(--em-sem-text);
-  --em-daterangepicker-day-font-family: var(--em-core-font-family--base);
-  --em-daterangepicker-day-font-size: var(--em-core-font-size--sm);
-  --em-daterangepicker-day-font-weight: var(--em-core-font-weight--medium);
-
-  --em-daterangepicker-label-color: var(--em-sem-text);
-  --em-daterangepicker-label-font-family: var(--em-core-font-family--base);
-  --em-daterangepicker-label-font-size: var(--em-core-font-size--sm);
-  --em-daterangepicker-label-font-weight: var(--em-core-font-weight--medium);
-
-  --em-daterangepicker-weekday-color: var(--em-sem-text--muted);
-  --em-daterangepicker-weekday-font-family: var(--em-core-font-family--base);
-  --em-daterangepicker-weekday-font-size: var(--em-core-font-size--sm);
-  --em-daterangepicker-weekday-font-weight: var(--em-core-font-weight--medium);
-
-  --em-daterangepicker-day-range-limit-border-radius: var(--em-core-border-radius--200);
-  --em-daterangepicker-day-outside: var(--em-sem-text--subtle);
-
-  --em-daterangepicker-chevron-color: var(--em-sem-text);
-  --em-daterangepicker-chevron-size: var(--em-core-size--0800);
-  --em-daterangepicker-chevron-padding: var(--em-core-spacing--0200);
-  --em-daterangepicker-chevron-border-radius: var(--em-core-border-radius--200);
-  --em-daterangepicker-chevron-background: var(--em-sem-background--light);
-  --em-daterangepicker-chevron-icon-size: var(--em-core-size--0400);
-  --em-daterangepicker-chevron--hover: var(--em-sem-background--subtle);
-  --em-daterangepicker-chevron--active: var(--em-sem-background--muted);
 }
