--- a/src/components/shared/Tooltip/Tooltip.module.css
+++ b/src/components/shared/Tooltip/Tooltip.module.css
@@ -1,6 +1,7 @@
 .tooltipContent {
   text-align: center;
   font-style: normal;
+  text-align: left;
 
   padding: var(--em-tooltip-padding-top-bottom, 0.375rem)
     var(--em-tooltip-padding-left-right, 0.5rem);
@@ -11,4 +12,5 @@
   font-size: var(--em-tooltip-font-size, 0.75rem);
   font-weight: var(--em-tooltip-font-weight, 700);
   line-height: var(--em-tooltip-line-height, 0.875rem);
+  max-width: var(--em-tooltip-max-width, 16rem);
 }
